--- a/MobileMedia.MarketParser.WebApi/MobileMedia.MarketParser.WebApi.csproj
+++ b/MobileMedia.MarketParser.WebApi/MobileMedia.MarketParser.WebApi.csproj
@@ -186,6 +186,7 @@
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\MarketController.cs" />
+    <Compile Include="CustomExceptionAtribute.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -225,12 +226,15 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
-    <Content Include="Scripts\getappsinfo.js" />
+    <Content Include="Scripts\MyScripts\getappsinfo.js" />
     <Content Include="Scripts\jquery-3.3.1.js" />
     <Content Include="Scripts\jquery-3.3.1.min.js" />
     <Content Include="Scripts\jquery-3.3.1.slim.js" />
     <Content Include="Scripts\jquery-3.3.1.slim.min.js" />
     <Content Include="Scripts\modernizr-2.8.3.js" />
+    <Content Include="Scripts\MyScripts\modal.js" />
+    <Content Include="Scripts\MyScripts\renderitemblock.js" />
+    <Content Include="Scripts\MyScripts\renderStartPage.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -245,10 +249,8 @@
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
-    <Content Include="Views\Home\AppsInfo.cshtml" />
-    <Content Include="Views\Home\Task2.cshtml" />
     <Content Include="Views\Home\Task1.cshtml" />
-    <Content Include="Views\Home\AppInfoViewer.cshtml" />
+    <Content Include="Views\Home\Task2.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
